--- a/THESIS/01-intro.Rmd
+++ b/THESIS/01-intro.Rmd
@@ -5,9 +5,10 @@
 Since antiquity the idea of building a thinking machine has always been in the minds of philosophers, artists, sciencemen, kings and commoners alike, filling us with wonder, terror and contemplation.  A human creation capable of human feats, would turn us, at least in an allegorical sense, into gods.
 
 Talk about why automata are a good benchmark.
-+ Easy to program
-+ Model complex systems
-+ Are models of universal computation
+
+* Easy to program
+* Model complex systems
+* Are models of universal computation
 
 ## Problem Statement
 
